--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,28 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.3.5'
+    id 'org.jetbrains.intellij' version '1.17.4'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
-group 'com.pinkfloyded.idea-file-path-autocomplete'
+group 'com.cl0uds3c'
 version '0.4.1'
 
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'com.google.guava:guava:26.0-jre'
-    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+    testImplementation 'com.google.guava:guava:26.0-jre'
+    testImplementation group: 'commons-io', name: 'commons-io', version: '2.7'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 intellij {
-    version '2018.2.4'
-    updateSinceUntilBuild false
+    version = '2023.3.2'
+}
+kotlin {
+    jvmToolchain(17)
 }
